Cleaned up Login/Logout. Added Blog
Made the Login/Logout process more seamless. Started some basic authentication too.
Added the Blogging components, including models and appropriate ApiService functions.
Got screwed over with CSS again. FML.

--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,10 +1,10 @@
 {
-  "/test-api/*": {
-    "target": "http://localhost:80/testapi",
+  "/api/*": {
+    "target": "http://localhost:80/test-api",
     "secure": false
   },
   "/token": {
-    "target": "http://localhost:80/testapi",
+    "target": "http://localhost:80/test-api",
     "secure": false
   }
 }
